--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,7 @@ jobs:
         run: tree -L 2
 
       - name: Build the package
+        shell: bash -l {0}
         run: |
           pip install build
           python -m build
@@ -104,7 +105,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download build artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: build-artifacts
           path: ./downloaded
@@ -117,10 +118,12 @@ jobs:
           activate-environment: fsds-env
 
       - name: Install built package
+        shell: bash -l {0}
         run: |
           pip install downloaded/dist/*.whl
 
       - name: Run workflow scripts (log to console)
+        shell: bash -l {0}
         run: |
           echo "Running workflow scripts with timestamp logs"
           python scripts/ingest_script.py --output_folder datasets/scripts
