Successfully implemented MLflow in the scripts and formatted the code fourth time

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI Workflow
 
 on:
   push:
-    branches: [fix/#1]  # Change to 'main' for production
+    branches: [fix/#3]  
   pull_request:
     branches: [main]
 
