Added the action for pulling and running docker image AGAIN

--- a/.github/workflows/docker_run.yml
+++ b/.github/workflows/docker_run.yml
@@ -1,7 +1,8 @@
 name: Pull and Run Docker Images
 
 on:
-    workflow_dispatch:
+    push:
+        branches: fix/#3
 
 jobs:
     pull-and-run-ACR:
