--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,32 @@ on:
     branches: [main]
 
 jobs:
+  style-test:
+    name: Style-check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Conda
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+          environment-file: env.yml
+          auto-activate-base: false
+          activate-environment: fsds-env 
+            
+      - name: Run isort
+        shell: bash -l {0}
+        run: isort . --check --diff 
+            
+      - name: Run black
+        shell: bash -l {0}
+        run: black . --check --diff
+
+      - name: Run flake8
+        shell: bash -l {0}
+        run: flake8 .
+
   unit-functional-tests:
     name: Unit & Functional Tests
     runs-on: ubuntu-latest
