--- a/env.yml
+++ b/env.yml
@@ -40,6 +40,7 @@ dependencies:
   - threadpoolctl==3.6.0
 
   - pip:
+    - evidently==0.6.7
     - build==1.2.2.post1
     - iniconfig==2.1.0
     - tzdata==2025.2
