Added pull from ADF

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches: []
 
+
 jobs:
   style-test:
     name: Style-check
@@ -95,7 +96,7 @@ jobs:
             dist/
             env.yml
 
-  install:
+   install:
     name: Install & Smoke Test
     runs-on: ubuntu-latest
     needs: build
@@ -120,20 +121,48 @@ jobs:
         shell: bash -l {0}
         run: |
           pip install downloaded/dist/*.whl
-          
+
+      - name: Install Azure CLI
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+
       - name: Create mlruns directory
         run: mkdir -p ./mlruns
 
-      - name: Run workflow scripts (log to console)
+      - name: Run ingest_data.py
         shell: bash -l {0}
         env:
           MLFLOW_TRACKING_URI: file:./mlruns
         run: |
-          echo "Running workflow scripts with timestamp logs"
+          echo "Running ingest_data.py"
           python scripts/ingest_data.py --output_folder outputs/data
+
+          echo "Uploading data to Azure Blob Storage..."
+          az storage blob upload-batch \
+            --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} \
+            --destination output/csv_files \
+            --source outputs/data \
+            --auth-mode login
+
+      - name: Download data from Azure Blob Storage
+        run: |
+          echo "Downloading data from Azure Blob Storage..."
+          rm -rf outputs/data && mkdir -p outputs/data
+          az storage blob download-batch \
+            --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} \
+            --source output/csv_files \
+            --destination outputs/data \
+            --auth-mode login
+
+      - name: Run train.py and score.py
+        shell: bash -l {0}
+        env:
+          MLFLOW_TRACKING_URI: file:./mlruns
+        run: |
+          echo "Running training and scoring"
           python scripts/train.py --output_folder outputs/model --input_folder outputs/data
           python scripts/score.py --model_folder outputs/model --dataset_folder outputs/data --output_folder outputs/metric
-        
+
   build-and-push-ACR:
     name: Build and Push to ACR
     needs: install
